--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Texto principal -->
     <div class="col-lg-6">
       <h1 class="h1-custom">Hero Principal</h1>
-      <p class="p-custom">Esta sección es la primera impresión de tu web. Ideal para presentar tu propuesta de valor en pocas palabras y motivar una acción.</p>
+      <p class="p-custom">Sin salir de casa, sin dejar de explorar. Conocé las bodegas virtuales. Una experiencia de los mejores sabores sin salir de tu casa</p>
       <div class="d-flex gap-3 mt-4">
         <a href="#" class="btn btn-dark">Acción Principal</a>
         <a href="#" class="btn btn-outline-dark">Acción Secundaria</a>
