--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <h1 class="h1-custom">Hero Principal</h1>
       <p class="p-custom">Sin salir de casa, sin dejar de explorar. Conocé las bodegas virtuales. Una experiencia de los mejores sabores sin salir de tu casa</p>
       <div class="d-flex gap-3 mt-4">
-        <a href="#" class="btn btn-dark">Acción Principal</a>
+        <a href="#" class="btn btn-dark">Viví la experiencia</a>
         <a href="#" class="btn btn-outline-dark">Acción Secundaria</a>
       </div>
     </div>
@@ -64,20 +64,20 @@
 
 <!-- ABOUT: Sección sobre nosotros -->
 <section class="section-spacing container text-center">
-  <h2 class="h2-custom">Sección Sobre Nosotros</h2>
+  <h2 class="h2-custom">¿Cómo funciona Uva club?</h2>
   <p class="mt-3 mb-5">Contá quién sos, qué hacés y por qué debería interesarle al visitante.</p>
   <div class="row">
     <!-- Tres columnas informativas -->
     <div class="col-md-4">
-      <h4 class="h4-custom">Experiencia</h4>
+      <h4 class="h4-custom">Elegí</h4>
       <p class="p-custom">Un detalle de tu trayectoria o historia.</p>
     </div>
     <div class="col-md-4">
-      <h4 class="h4-custom">Valores</h4>
+      <h4 class="h4-custom">seleccionamos</h4>
       <p class="p-custom">¿Qué principios guían tu trabajo?</p>
     </div>
     <div class="col-md-4">
-      <h4 class="h4-custom">Compromiso</h4>
+      <h4 class="h4-custom">enviamos</h4>
       <p class="p-custom">Cómo asegurás la calidad en lo que ofrecés.</p>
     </div>
   </div>
