--- a/index.html
+++ b/index.html
@@ -62,27 +62,69 @@
 </section>
 <!-- /HERO -->
 
-<!-- ABOUT: Sección sobre nosotros -->
-<section class="section-spacing container text-center">
-  <h2 class="h2-custom">¿Cómo funciona Uva club?</h2>
-  <p class="mt-3 mb-5">Contá quién sos, qué hacés y por qué debería interesarle al visitante.</p>
+<!-- SECCIÓN G: Beneficios destacados en cards con íconos de Bootstrap -->
+<section class="section-spacing container text-center py-5">
+  <h2 class="mb-5 text-uppercase fw-bold" class="h2-custom">¿Por qué elegirnos?</h2>
   <div class="row">
-    <!-- Tres columnas informativas -->
-    <div class="col-md-4">
-      <h4 class="h4-custom">Elegí</h4>
-      <p class="p-custom">Un detalle de tu trayectoria o historia.</p>
+    <!-- Card 1 -->
+    <div class="col-md-4 mb-4">
+      <div class="card h-100 p-4 shadow-sm">
+        <i class="bi bi-truck fs-1 mb-3 text-primary"></i>
+        <h5>Entrega rápida</h5>
+        <p class="p-custom">Recibí tu producto en tiempo récord con envíos ágiles y seguros.</p>
+      </div>
     </div>
-    <div class="col-md-4">
-      <h4 class="h4-custom">seleccionamos</h4>
-      <p class="p-custom">¿Qué principios guían tu trabajo?</p>
+    <!-- Card 2 -->
+    <div class="col-md-4 mb-4">
+      <div class="card h-100 p-4 shadow-sm">
+        <i class="bi bi-headset fs-1 mb-3 text-primary"></i>
+        <h5>Atención personalizada</h5>
+        <p class="p-custom">Te acompañamos en todo el proceso con soporte real y humano.</p>
+      </div>
     </div>
-    <div class="col-md-4">
-      <h4 class="h4-custom">enviamos</h4>
-      <p class="p-custom">Cómo asegurás la calidad en lo que ofrecés.</p>
+    <!-- Card 3 -->
+    <div class="col-md-4 mb-4">
+      <div class="card h-100 p-4 shadow-sm">
+        <i class="bi bi-shield-lock fs-1 mb-3 text-primary"></i>
+        <h5>Seguridad garantizada</h5>
+        <p class="p-custom">Tu información y tu compra protegidas en cada paso.</p>
+      </div>
     </div>
   </div>
 </section>
-<!-- /ABOUT -->
+
+<!-- SECCIÓN B: Imagen izquierda, texto derecha -->
+<section class="section-spacing container">
+  <div class="row align-items-center">
+    <!-- Columna de imagen -->
+    <div class="col-lg-6 text-center mb-4 mb-lg-0">
+      <img src="https://imageplaceholder.net/500x400" class="img-fluid img-rounded" alt="Imagen ilustrativa">
+    </div>
+    <!-- Columna de texto -->
+    <div class="col-lg-6">
+      <h2 class="display-5" class="h2-custom">Título con imagen</h2>
+      <p class="lead-custom">Descripción breve que acompaña y refuerza la propuesta.</p>
+      <a href="#" class="btn btn-primary mt-3">Saber más</a>
+    </div>
+  </div>
+</section>
+
+<!-- SECCIÓN C: Texto izquierda, imagen derecha -->
+<section class="section-spacing container">
+  <div class="row align-items-center">
+    <!-- Columna de texto -->
+    <div class="col-lg-6">
+      <h2 class="display-5" class="h2-custom">Otra disposición</h2>
+      <p class="lead-custom">Sección útil para combinar mensajes con una imagen a la derecha.</p>
+      <a href="#" class="btn btn-primary mt-3">Conocé más</a>
+    </div>
+    <!-- Columna de imagen -->
+    <div class="col-lg-6 text-center mt-4 mt-lg-0">
+      <img src="https://imageplaceholder.net/500x400" class="img-fluid img-rounded" alt="Imagen ilustrativa">
+    </div>
+  </div>
+</section>
+
 
 <!-- SERVICES: Servicios o funcionalidades -->
 <section class="section-spacing container text-center">
@@ -228,36 +270,6 @@
   </div>
 </section>
 
-<!-- SECCIÓN G: Beneficios destacados en cards con íconos de Bootstrap -->
-<section class="section-spacing container text-center py-5">
-  <h2 class="mb-5 text-uppercase fw-bold" class="h2-custom">¿Por qué elegirnos?</h2>
-  <div class="row">
-    <!-- Card 1 -->
-    <div class="col-md-4 mb-4">
-      <div class="card h-100 p-4 shadow-sm">
-        <i class="bi bi-truck fs-1 mb-3 text-primary"></i>
-        <h5>Entrega rápida</h5>
-        <p class="p-custom">Recibí tu producto en tiempo récord con envíos ágiles y seguros.</p>
-      </div>
-    </div>
-    <!-- Card 2 -->
-    <div class="col-md-4 mb-4">
-      <div class="card h-100 p-4 shadow-sm">
-        <i class="bi bi-headset fs-1 mb-3 text-primary"></i>
-        <h5>Atención personalizada</h5>
-        <p class="p-custom">Te acompañamos en todo el proceso con soporte real y humano.</p>
-      </div>
-    </div>
-    <!-- Card 3 -->
-    <div class="col-md-4 mb-4">
-      <div class="card h-100 p-4 shadow-sm">
-        <i class="bi bi-shield-lock fs-1 mb-3 text-primary"></i>
-        <h5>Seguridad garantizada</h5>
-        <p class="p-custom">Tu información y tu compra protegidas en cada paso.</p>
-      </div>
-    </div>
-  </div>
-</section>
 
 <!-- TEAM: Presentación del equipo -->
 <section class="section-spacing container text-center">
