--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Plantilla Visible - Belluccia 3</title>
 
     <!-- Tipografía desde Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
 
     <!-- Framework CSS de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
@@ -24,7 +26,7 @@
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
     <!-- Logo o nombre del sitio -->
-    <a class="navbar-brand" href="#">MiwwwWeb</a>
+    <img src="Assets/HOME.fotos/logo.uva-07.png" class="img-fluid img-rounded" alt="Imagen navbar">
     <!-- Botón para mostrar menú en mobile -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
@@ -51,7 +53,7 @@
       <p class="p-custom">Sin salir de casa, sin dejar de explorar. Conocé las bodegas virtuales. Una experiencia de los mejores sabores sin salir de tu casa</p>
       <div class="d-flex gap-3 mt-4">
         <a href="#" class="btn btn-dark">Viví la experiencia</a>
-        <a href="#" class="btn btn-outline-dark">Acción Secundaria</a>
+  
       </div>
     </div>
     <!-- Imagen destacada -->
@@ -64,30 +66,31 @@
 
 <!-- SECCIÓN G: Beneficios destacados en cards con íconos de Bootstrap -->
 <section class="section-spacing container text-center py-5">
-  <h2 class="mb-5 text-uppercase fw-bold" class="h2-custom">¿Por qué elegirnos?</h2>
+  <h2 class="mb-5 text-uppercase" class="h2-custom">¿CÓMO FUNCIONA UVA CLUB?</h2>
   <div class="row">
     <!-- Card 1 -->
     <div class="col-md-4 mb-4">
       <div class="card h-100 p-4 shadow-sm">
-        <i class="bi bi-truck fs-1 mb-3 text-primary"></i>
-        <h5>Entrega rápida</h5>
-        <p class="p-custom">Recibí tu producto en tiempo récord con envíos ágiles y seguros.</p>
+      <img src="assets/HOME.fotos/icons-04.png" alt="icon-img" class="icon-img mb-3">
+        <h5>ELEGÍ</h5>
+        <p class="beneficio-texto tipografia-inter">Escogé tu plan real. Para cada mes <span style="font-weight: 700;"> recibir <br>tus vinos </span> seleccionados.</p>
       </div>
     </div>
     <!-- Card 2 -->
     <div class="col-md-4 mb-4">
       <div class="card h-100 p-4 shadow-sm">
-        <i class="bi bi-headset fs-1 mb-3 text-primary"></i>
-        <h5>Atención personalizada</h5>
-        <p class="p-custom">Te acompañamos en todo el proceso con soporte real y humano.</p>
+     <img src="assets/HOME.fotos/icons-05.png" alt="icon-img" class="icon-img mb-3">
+
+        <h5>SELECCIONAMOS</h5>
+        <p class="beneficio-texto tipografia-inter"> <span style="font-weight: 700;">Escogemos lo mejor de nuestra bodega </span><br> de la temporada del año</p>
       </div>
     </div>
     <!-- Card 3 -->
     <div class="col-md-4 mb-4">
       <div class="card h-100 p-4 shadow-sm">
-        <i class="bi bi-shield-lock fs-1 mb-3 text-primary"></i>
-        <h5>Seguridad garantizada</h5>
-        <p class="p-custom">Tu información y tu compra protegidas en cada paso.</p>
+       <img src="assets/HOME.fotos/icons-06.png" alt="icon-img" class="icon-img mb-3">
+        <h5>ENVIAMOS</h5>
+        <p class="beneficio-texto tipografia-inter">Envíamos<span style="font-weight: 700;"> tu box <br>todos los meses</span> a tu casa, sin moverte</p>
       </div>
     </div>
   </div>
@@ -98,167 +101,43 @@
   <div class="row align-items-center">
     <!-- Columna de imagen -->
     <div class="col-lg-6 text-center mb-4 mb-lg-0">
-      <img src="https://imageplaceholder.net/500x400" class="img-fluid img-rounded" alt="Imagen ilustrativa">
+      <img src="Assets/HOME.fotos/1.home.png" class="img-fluid img-rounded" alt="Imagen ilustrativa">
     </div>
     <!-- Columna de texto -->
     <div class="col-lg-6">
-      <h2 class="display-5" class="h2-custom">Título con imagen</h2>
-      <p class="lead-custom">Descripción breve que acompaña y refuerza la propuesta.</p>
-      <a href="#" class="btn btn-primary mt-3">Saber más</a>
+      <h2 class="display-5" class="h2-custom">EL ARTE DE SELECCIONAR</h2>
+      <p class="beneficio-texto tipografia-inter">En Uva Club seleccionamos <span style="font-weight: 700;">vinos de distintas bodegas</span>, regiones y estilos.Y lo condensamos en una caja llena de placer. <br>Cada botella fue elegida por su carácter, su historia y su momento.
+<br>Un recorrido curado para quienes buscan algo más que una copa: una experiencia.</p>
+    
     </div>
   </div>
 </section>
 
 <!-- SECCIÓN C: Texto izquierda, imagen derecha -->
-<section class="section-spacing container">
+<section class="section-spacing seccion-experimenta">
+  <div class="container">
   <div class="row align-items-center">
     <!-- Columna de texto -->
     <div class="col-lg-6">
-      <h2 class="display-5" class="h2-custom">Otra disposición</h2>
-      <p class="lead-custom">Sección útil para combinar mensajes con una imagen a la derecha.</p>
-      <a href="#" class="btn btn-primary mt-3">Conocé más</a>
+      <h2 class="display-5" class="h2-custom">EXPERIMENTÁ</h2>
+      <p class="beneficio-texto tipografia-inter">Entre esas miles de especies, elegí la nuestra:<span style="font-weight: 700;"> <br>la vid, fuente de rituales, descubrimientos y placer.</span>
+
+<br>Con los de siempre, con los que mas 
+amas, junto a Uva club.</p>
     </div>
     <!-- Columna de imagen -->
     <div class="col-lg-6 text-center mt-4 mt-lg-0">
-      <img src="https://imageplaceholder.net/500x400" class="img-fluid img-rounded" alt="Imagen ilustrativa">
+      <img src="Assets/HOME.fotos/2.home.png" class="img-fluid img-rounded" alt="Imagen ilustrativa">
     </div>
   </div>
 </section>
-
-
-<!-- SERVICES: Servicios o funcionalidades -->
-<section class="section-spacing container text-center">
-  <h2 class="h2-custom">Servicios o Características</h2>
-  <p class="mb-5">Lista de servicios o aspectos que se quieren destacar.</p>
-  <div class="row">
-    <!-- Cada columna es una tarjeta de servicio -->
-    <div class="col-md-4 mb-4">
-      <div class="card h-100 p-4">
-        <img src="https://imageplaceholder.net/100x100" class="mb-3" alt="Servicio">
-        <h5>Servicio 1</h5>
-        <p class="p-custom">Breve explicación del servicio.</p>
-      </div>
-    </div>
-    <!-- Cada columna es una tarjeta de servicio -->
-    <div class="col-md-4 mb-4">
-      <div class="card h-100 p-4">
-        <img src="https://imageplaceholder.net/100x100" class="mb-3" alt="Servicio">
-        <h5>Servicio 1</h5>
-        <p class="p-custom">Breve explicación del servicio.</p>
-      </div>
-    </div>
-    <!-- Cada columna es una tarjeta de servicio -->
-    <div class="col-md-4 mb-4">
-      <div class="card h-100 p-4">
-        <img src="https://imageplaceholder.net/100x100" class="mb-3" alt="Servicio">
-        <h5>Servicio 1</h5>
-        <p class="p-custom">Breve explicación del servicio.</p>
-      </div>
-    </div>
-    <!-- ... repetir estructura para más servicios ... -->
-  </div>
-</section>
-<!-- /SERVICES -->
-
-<!-- SECCIÓN A: Texto centrado sin imagen -->
-<section class="section-spacing container text-center">
-  <h2 class="display-5" class="h2-custom">Título destacado</h2>
-  <p class="lead-custom">Un texto breve para explicar o presentar algo importante.</p>
-  <div class="mt-4 d-flex justify-content-center gap-3">
-    <a href="#" class="btn btn-primary">Acción principal</a>
-    <a href="#" class="btn btn-outline-primary">Acción secundaria</a>
-  </div>
-</section>
-
-
-<!-- SECCIÓN D: Dos columnas iguales con texto e imagen -->
-<section class="section-spacing container">
-  <div class="row align-items-center">
-    <!-- Imagen a la izquierda -->
-    <div class="col-md-6 text-center mb-4 mb-md-0">
-      <img src="https://imageplaceholder.net/400x300" class="img-fluid img-rounded" alt="Imagen">
-    </div>
-    <!-- Texto a la derecha -->
-    <div class="col-md-6 text-center text-md-start">
-      <h3 class="display-6" class="h3-custom">Título flexible</h3>
-      <p class="lead-custom">Podés usar este bloque para presentar información destacada acompañada de una imagen.</p>
-      <a href="#" class="btn btn-primary">Explorar</a>
-    </div>
-  </div>
-</section>
-
-
-<!-- GALERÍA B: Masonry layout con column-count (hay controles en el css)-->
-<section class="section-spacing container py-5">
-  <h2 class="text-center mb-5 text-uppercase fw-bold" class="h2-custom">Galería tipo Masonry</h2>
-  
-  <div class="masonry__container">
-    <img class="masonry__item" src="https://imageplaceholder.net/400x300" alt="Imagen 1">
-    <img class="masonry__item" src="https://imageplaceholder.net/400x600" alt="Imagen 2">
-    <img class="masonry__item" src="https://imageplaceholder.net/400x350" alt="Imagen 3">
-    <img class="masonry__item" src="https://imageplaceholder.net/400x500" alt="Imagen 4">
-    <img class="masonry__item" src="https://imageplaceholder.net/400x250" alt="Imagen 5">
-    <img class="masonry__item" src="https://imageplaceholder.net/400x450" alt="Imagen 6">
-    <img class="masonry__item" src="https://imageplaceholder.net/400x400" alt="Imagen 7">
-    <img class="masonry__item" src="https://imageplaceholder.net/400x550" alt="Imagen 8">
-  </div>
-</section>
-
-
-
-<!-- GALERÍA D: Carrusel con imagen + texto encima -->
-<section class="section-spacing container py-5 text-center">
-  <h2 class="mb-4" class="h2-custom">Galería con textos</h2>
-  <div id="carouselGaleriaD" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <!-- Slide 1 -->
-      <div class="carousel-item active">
-        <div class="position-relative">
-          <img src="https://imageplaceholder.net/800x400" class="img-fluid img-rounded w-100 rounded" alt="Imagen 1">
-          <div class="position-absolute top-0 start-0 p-4 bg-dark bg-opacity-50 text-white w-100 h-100 d-flex align-items-center justify-content-start text-start">
-            <div>
-              <h4 class="fw-bold" class="h4-custom">Título 1</h4>
-              <p class="lead-custom">Descripción breve sobre esta imagen.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Slide 2 -->
-      <div class="carousel-item">
-        <div class="position-relative">
-          <img src="https://imageplaceholder.net/800x400" class="img-fluid img-rounded w-100 rounded" alt="Imagen 2">
-          <div class="position-absolute top-0 start-0 p-4 bg-dark bg-opacity-50 text-white w-100 h-100 d-flex align-items-center justify-content-start text-start">
-            <div>
-              <h4 class="fw-bold" class="h4-custom">Título 2</h4>
-              <p class="lead-custom">Otra descripción diferente para esta imagen.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Controles -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselGaleriaD" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselGaleriaD" data-bs-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </button>
-  </div>
-</section>
-
-
-<!-- CTA: Llamado a la acción final -->
-<section class="section-spacing container text-center my-5">
-  <h2 class="h2-custom">¿Listo para empezar?</h2>
-  <p class="p-custom">Texto para motivar acción.</p>
-  <a href="#" class="btn btn-dark mt-4">Comenzá Ahora</a>
-</section>
-<!-- /CTA -->
 
 <!-- PLANES DE SUSCRIPCIÓN: Sección con 3 opciones destacadas -->
-<section class="section-spacing container text-center">
-  <h2 class="h2-custom">Planes de Suscripción</h2>
-  <p class="p-custom">Elegí el plan que mejor se adapta a tus necesidades. Cada uno incluye diferentes beneficios pensados para vos.</p>
+<section class="section-spacing seccion-suscripciones text-center planes-bg">
+  <div class="container">
+  <h2 class="h2-custom">LLENÁ TU COPA</h2>
+  <p class="beneficio-texto tipografia-inter">Conocé <span style="font-weight: 700;"> nuestras BOX disponibles</span>
+y suscribite a este reinado de placer</p>
   
   <div class="row mt-5">
     
@@ -343,6 +222,101 @@
   </div>
 </section>
 <!-- /PLANES DE SUSCRIPCIÓN -->
+
+
+<!-- SECCIÓN A: Texto centrado sin imagen -->
+<section class="section-spacing container text-center">
+  <h2 class="display-5" class="h2-custom">Título destacado</h2>
+  <p class="lead-custom">Un texto breve para explicar o presentar algo importante.</p>
+  <div class="mt-4 d-flex justify-content-center gap-3">
+    <a href="#" class="btn btn-primary">Acción principal</a>
+    <a href="#" class="btn btn-outline-primary">Acción secundaria</a>
+  </div>
+</section>
+
+
+<!-- SECCIÓN D: Dos columnas iguales con texto e imagen -->
+<section class="section-spacing container">
+  <div class="row align-items-center">
+    <!-- Imagen a la izquierda -->
+    <div class="col-md-6 text-center mb-4 mb-md-0">
+      <img src="https://imageplaceholder.net/400x300" class="img-fluid img-rounded" alt="Imagen">
+    </div>
+    <!-- Texto a la derecha -->
+    <div class="col-md-6 text-center text-md-start">
+      <h3 class="display-6" class="h3-custom">Título flexible</h3>
+      <p class="lead-custom">Podés usar este bloque para presentar información destacada acompañada de una imagen.</p>
+      <a href="#" class="btn btn-primary">Explorar</a>
+    </div>
+  </div>
+</section>
+
+
+<!-- GALERÍA B: Masonry layout con column-count (hay controles en el css)-->
+<section class="section-spacing container py-5">
+  <h2 class="text-center mb-5 text-uppercase" class="h2-custom">Galería tipo Masonry</h2>
+  
+  <div class="masonry__container">
+    <img class="masonry__item" src="https://imageplaceholder.net/400x300" alt="Imagen 1">
+    <img class="masonry__item" src="https://imageplaceholder.net/400x600" alt="Imagen 2">
+    <img class="masonry__item" src="https://imageplaceholder.net/400x350" alt="Imagen 3">
+    <img class="masonry__item" src="https://imageplaceholder.net/400x500" alt="Imagen 4">
+    <img class="masonry__item" src="https://imageplaceholder.net/400x250" alt="Imagen 5">
+    <img class="masonry__item" src="https://imageplaceholder.net/400x450" alt="Imagen 6">
+    <img class="masonry__item" src="https://imageplaceholder.net/400x400" alt="Imagen 7">
+    <img class="masonry__item" src="https://imageplaceholder.net/400x550" alt="Imagen 8">
+  </div>
+</section>
+
+<!-- GALERÍA D: Carrusel con imagen + texto encima -->
+<section class="section-spacing container py-5 text-center">
+  <h2 class="mb-4" class="h2-custom">Galería con textos</h2>
+  <div id="carouselGaleriaD" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <!-- Slide 1 -->
+      <div class="carousel-item active">
+        <div class="position-relative">
+          <img src="https://imageplaceholder.net/800x400" class="img-fluid img-rounded w-100 rounded" alt="Imagen 1">
+          <div class="position-absolute top-0 start-0 p-4 bg-dark bg-opacity-50 text-white w-100 h-100 d-flex align-items-center justify-content-start text-start">
+            <div>
+              <h4 class="fw-bold" class="h4-custom">Título 1</h4>
+              <p class="lead-custom">Descripción breve sobre esta imagen.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Slide 2 -->
+      <div class="carousel-item">
+        <div class="position-relative">
+          <img src="https://imageplaceholder.net/800x400" class="img-fluid img-rounded w-100 rounded" alt="Imagen 2">
+          <div class="position-absolute top-0 start-0 p-4 bg-dark bg-opacity-50 text-white w-100 h-100 d-flex align-items-center justify-content-start text-start">
+            <div>
+              <h4 class="fw-bold" class="h4-custom">Título 2</h4>
+              <p class="lead-custom">Otra descripción diferente para esta imagen.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Controles -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselGaleriaD" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselGaleriaD" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
+</section>
+
+
+<!-- CTA: Llamado a la acción final -->
+<section class="section-spacing container text-center my-5">
+  <h2 class="h2-custom">¿Listo para empezar?</h2>
+  <p class="p-custom">Texto para motivar acción.</p>
+  <a href="#" class="btn btn-dark mt-4">Comenzá Ahora</a>
+</section>
+<!-- /CTA -->
+
 
 <!-- FAQS: Preguntas frecuentes -->
 <section class="section-spacing container text-center">
