--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@ y suscribite a este reinado de placer</p>
           <li>✔ 3 vinos de 1L</li>
           <li>✔ Cata digital</li>
           <li>✔ Maridaje sleccionado</li>
+          <li>✔ Kit bienvenida</li>
           <li>✔ Herramientas premium</li>
         </ul>
 
@@ -210,10 +211,11 @@ y suscribite a este reinado de placer</p>
         
         <!-- Lista de beneficios -->
         <ul class="list-unstyled text-start mx-auto" style="max-width: 250px;">
-          <li>✔ Todo lo del plan Pro</li>
-          <li>✔ Consultorías personalizadas</li>
-          <li>✔ Acceso anticipado a lanzamientos</li>
-          <li>✔ Certificados exclusivos</li>
+           <li>✔ 2 vinos de 1L</li>
+          <li>✔ Cata digital</li>
+          <li>✔ Maridaje sleccionado</li>
+          <li>✔ Kit bienvenida</li>
+          <li>✖Herramientas premium</li>
         </ul>
 
         <!-- Botón CTA -->
