cards titulos y colores

--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@ amas, junto a Uva club.</p>
 <section class="section-spacing seccion-suscripciones text-center planes-bg">
   <div class="container">
   <h2 class="h2-custom">LLENÁ TU COPA</h2>
-  <p class="beneficio-texto tipografia-inter">Conocé <span style="font-weight: 700;"> nuestras BOX disponibles</span>
+  <p class="beneficio-texto tipografia-inter planes-bg p">Conocé <span style="font-weight: 700;"> nuestras BOX disponibles</span>
 y suscribite a este reinado de placer</p>
   
   <div class="row mt-5">
     
     <!-- Card: Plan Básico -->
     <div class="col-md-4 mb-4">
-      <div class="card p-4 h-100">
+      <div class="card p-4 h-100 card-duke">
         <!-- Título y precio -->
         <h5 class="text-uppercase">DUKE PACK</h5>
         <p class="display-6 text-primary">$49.000 <small>/ mes</small></p>
@@ -161,7 +161,6 @@ y suscribite a este reinado de placer</p>
           <li>✔ Cata digital</li>
           <li>✖ Maridaje</li>
           <li>✖ Actualizaciones mensuales</li>
-          <li>✖ Actualizaciones mensuales</li>
         </ul>
 
         <!-- Botón CTA -->
@@ -171,7 +170,7 @@ y suscribite a este reinado de placer</p>
 
     <!-- Card: Plan Pro (Recomendado) -->
     <div class="col-md-4 mb-4">
-      <div class="card p-4 h-100 border border-primary">
+      <div class="card p-4 h-100 border border-primary card-king">
         <!-- Título y precio -->
         <h5 class="text-uppercase">KING PLAN <span class="badge bg-primary ms-2">Recomendado</span></h5>
         <p class="display-6 text-primary">$55.000 <small>/ mes</small></p>
@@ -198,7 +197,7 @@ y suscribite a este reinado de placer</p>
 
     <!-- Card: Plan Full -->
     <div class="col-md-4 mb-4">
-      <div class="card p-4 h-100">
+      <div class="card p-4 h-100 card-prince">
         <!-- Título y precio -->
         <h5 class="text-uppercase">PRINCE PLAN</h5>
         <p class="display-6 text-primary">$60.000 <small>/ mes</small></p>
