--- a/index.html
+++ b/index.html
@@ -231,17 +231,16 @@ y suscribite a este reinado de placer</p>
 
 
 <!-- SECCIÓN D: Dos columnas iguales con texto e imagen -->
-<section class="section-spacing container">
+<section class="section-spacing seccion-vinito">
+ <div class="container">
   <div class="row align-items-center">
     <!-- Imagen a la izquierda -->
     <div class="col-md-6 text-center mb-4 mb-md-0">
-      <img src="https://imageplaceholder.net/400x300" class="img-fluid img-rounded" alt="Imagen">
+      <img src="Assets/HOME.fotos/hombreuva-14.png" class="img-fluid w-100" alt="Imagen">
     </div>
     <!-- Texto a la derecha -->
     <div class="col-md-6 text-center text-md-start">
-      <h3 class="display-6" class="h3-custom">Título flexible</h3>
-      <p class="lead-custom">Podés usar este bloque para presentar información destacada acompañada de una imagen.</p>
-      <a href="#" class="btn btn-primary">Explorar</a>
+      <h2 class="text-vino">CORONÁ TU DÍA <br> CON UNA COPA <br> DE VINO</h2>
     </div>
   </div>
 </section>
