--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="row align-items-center">
     <!-- Texto principal -->
     <div class="col-lg-6">
-      <h1 class="h1-custom">Hero Principal</h1>
+      <h1 class="h1-custom">TODOS LOS MESES UNA NUEVA EXPERIENCIA</h1>
       <p class="p-custom">Sin salir de casa, sin dejar de explorar. Conocé las bodegas virtuales. Una experiencia de los mejores sabores sin salir de tu casa ¡Comenzá ahora!</p>
       <div class="d-flex gap-3 mt-4">
         <a href="#" class="btn btn-dark">Viví la experiencia</a>
@@ -58,7 +58,7 @@
     </div>
     <!-- Imagen destacada -->
     <div class="col-lg-6 text-center">
-      <img src="https://imageplaceholder.net/500x500" class="img-fluid img-rounded" alt="Imagen Hero">
+      <img src="Assets/HOME.fotos/caja.hero-15.png" class="img-fluid img-rounded" alt="Imagen Hero">
     </div>
   </div>
 </section>
@@ -88,7 +88,7 @@
     <!-- Card 3 -->
     <div class="col-md-4 mb-4">
       <div class="card h-100 p-4 shadow-sm">
-       <img src="assets/HOME.fotos/icons-06.png" alt="icon-img" class="icon-img mb-3">
+       <img src="Assets/HOME.fotos/icons-06.png" alt="icon-img" class="icon-img mb-3">
         <h5>ENVIAMOS</h5>
         <p class="beneficio-texto tipografia-inter">Envíamos<span style="font-weight: 700;"> tu box <br>todos los meses</span> a tu casa, sin moverte</p>
       </div>
@@ -373,7 +373,7 @@ y suscribite a este reinado de placer</p>
 <!-- FOOTER: Pie de página -->
 <footer class="text-center py-4">
   <div class="container">
-    <p class="p-custom">© 2025 Belluccia 3 - Visible Template. Todos los derechos reservados.</p>
+    <p class="p-custom">© 2025 Belluccia 3 - Visible Template. Todos los derechos reservados Agustina Romero.</p>
   </div>
 </footer>
 <!-- /FOOTER -->
