--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Ítems del menú -->
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link active" href="#">Como funciona</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Equipo</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
@@ -71,7 +71,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 mb-4">
       <div class="card h-100 p-4 shadow-sm">
-      <img src="assets/HOME.fotos/icons-04.png" alt="icon-img" class="icon-img mb-3">
+      <img src="Assets/HOME.fotos/icons-04.png" alt="icon-img" class="icon-img mb-3">
         <h5>ELEGÍ</h5>
         <p class="beneficio-texto tipografia-inter">Escogé tu plan real. Para cada mes <span style="font-weight: 700;"> recibir <br>tus vinos </span> seleccionados.</p>
       </div>
@@ -79,7 +79,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 mb-4">
       <div class="card h-100 p-4 shadow-sm">
-     <img src="assets/HOME.fotos/icons-05.png" alt="icon-img" class="icon-img mb-3">
+     <img src="Assets/HOME.fotos/icons-05.png" alt="icon-img" class="icon-img mb-3">
 
         <h5>SELECCIONAMOS</h5>
         <p class="beneficio-texto tipografia-inter"> <span style="font-weight: 700;">Escogemos lo mejor de nuestra bodega </span><br> de la temporada del año</p>
