--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <!-- Ítems del menú -->
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link active" href="#">Como funciona</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Equipo</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+        <li class="nav-item"><a class="nav-link active" href="#">COMO FUNCIONA</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">SERVICIOS</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">EQUIPO</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">CONTACTO</a></li>
       </ul>
     </div>
   </div>
@@ -264,30 +264,24 @@ y suscribite a este reinado de placer</p>
 
 <!-- GALERÍA D: Carrusel con imagen + texto encima -->
 <section class="section-spacing container py-5 text-center">
-  <h2 class="mb-4" class="h2-custom">Galería con textos</h2>
+  <h2 class="mb-4" class="h2-custom">TESTIMONIOS DE SATISFACCIÓN</h2>
   <div id="carouselGaleriaD" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="position-relative">
-          <img src="https://imageplaceholder.net/800x400" class="img-fluid img-rounded w-100 rounded" alt="Imagen 1">
+          <img src="Assets/HOME.fotos/testi.1-16.png" class="img-fluid img-rounded w-100 rounded" alt="Imagen 1">
           <div class="position-absolute top-0 start-0 p-4 bg-dark bg-opacity-50 text-white w-100 h-100 d-flex align-items-center justify-content-start text-start">
-            <div>
-              <h4 class="fw-bold" class="h4-custom">Título 1</h4>
-              <p class="lead-custom">Descripción breve sobre esta imagen.</p>
-            </div>
+
           </div>
         </div>
       </div>
       <!-- Slide 2 -->
       <div class="carousel-item">
         <div class="position-relative">
-          <img src="https://imageplaceholder.net/800x400" class="img-fluid img-rounded w-100 rounded" alt="Imagen 2">
+          <img src="Assets/HOME.fotos/testi.2-17.png" class="img-fluid img-rounded w-100 rounded" alt="Imagen 2">
           <div class="position-absolute top-0 start-0 p-4 bg-dark bg-opacity-50 text-white w-100 h-100 d-flex align-items-center justify-content-start text-start">
-            <div>
-              <h4 class="fw-bold" class="h4-custom">Título 2</h4>
-              <p class="lead-custom">Otra descripción diferente para esta imagen.</p>
-            </div>
+  
           </div>
         </div>
       </div>
