--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ y suscribite a este reinado de placer</p>
 
 <!-- GALERÍA B: Masonry layout con column-count (hay controles en el css)-->
 <section class="section-spacing container py-5">
-  <h2 class="text-center mb-5 text-uppercase" class="h2-custom">Galería tipo Masonry</h2>
+  <h2 class="text-center mb-5 text-uppercase" class="h2-custom">COMO DISFRUTAN NUESTROS MIEMBROS</h2>
   
   <div class="masonry__container">
     <img class="masonry__item" src="https://imageplaceholder.net/400x300" alt="Imagen 1">
@@ -308,14 +308,14 @@ y suscribite a este reinado de placer</p>
 
 <!-- FAQS: Preguntas frecuentes -->
 <section class="section-spacing container text-center">
-  <h2 class="h2-custom">Preguntas Frecuentes</h2>
-  <p class="p-custom">Respuestas a dudas comunes.</p>
+  <h2 class="h2-custom">PREGUNTAS FRECUENTES</h2>
+  <p class="p-custom">Respuestas a dudas comunes.A dudas de todos</p>
   <div class="accordion mt-5" id="faqAccordion">
     <!-- Ítem de pregunta -->
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingOne">
         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-          ¿Qué incluye el servicio?
+          ¿Puedo elegir los vinos que recibo?
         </button>
       </h2>
       <div id="collapseOne" class="accordion-collapse collapse show">
@@ -325,10 +325,52 @@ y suscribite a este reinado de placer</p>
       </div>
     </div>
     <!-- Ítem de pregunta -->
-    <div class="accordion-item">
+     <div class="accordion-item">
       <h2 class="accordion-header" id="headingTwo">
         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
-          ¿Qué incluye el servicio?
+          ¿Qué hacaer si quiero mas vino?
+        </button>
+      </h2>
+      <div id="collapseTwo" class="accordion-collapse collapse show">
+        <div class="accordion-body">
+          Explicación detallada.
+        </div>
+      </div>
+    </div>
+
+     <!-- Ítem de pregunta -->
+     <div class="accordion-item">
+      <h2 class="accordion-header" id="headingTwo">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
+          ¿Que vino es el que vino?
+        </button>
+      </h2>
+      <div id="collapseTwo" class="accordion-collapse collapse show">
+        <div class="accordion-body">
+          Explicación detallada.
+        </div>
+      </div>
+    </div>
+
+     <!-- Ítem de pregunta -->
+     <div class="accordion-item">
+      <h2 class="accordion-header" id="headingTwo">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
+          ¿Que hacer si tengo una botella repetida?
+        </button>
+      </h2>
+      <div id="collapseTwo" class="accordion-collapse collapse show">
+        <div class="accordion-body">
+          Explicación detallada.
+        </div>
+      </div>
+    </div>
+
+     <!-- Ítem de pregunta -->
+     <div class="accordion-item">
+      <h2 class="accordion-header" id="headingTwo">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
+          ¿hay compromiso de permanencia?
         </button>
       </h2>
       <div id="collapseTwo" class="accordion-collapse collapse show">
