--- a/index.html
+++ b/index.html
@@ -297,15 +297,6 @@ y suscribite a este reinado de placer</p>
 </section>
 
 
-<!-- CTA: Llamado a la acción final -->
-<section class="section-spacing container text-center my-5">
-  <h2 class="h2-custom">¿Listo para empezar?</h2>
-  <p class="p-custom">Texto para motivar acción.</p>
-  <a href="#" class="btn btn-dark mt-4">Comenzá Ahora</a>
-</section>
-<!-- /CTA -->
-
-
 <!-- FAQS: Preguntas frecuentes -->
 <section class="section-spacing container text-center">
   <h2 class="h2-custom">PREGUNTAS FRECUENTES</h2>
@@ -385,7 +376,7 @@ y suscribite a este reinado de placer</p>
 
 <!-- CONTACT FORM: Formulario de contacto -->
 <section class="section-spacing container text-center">
-  <h2 class="h2-custom">Formulario de Contacto</h2>
+  <h2 class="h2-custom">QUEREMOS SABER DE VOS</h2>
   <p class="p-custom">Envía un mensaje directamente desde la web.</p>
   <div class="row justify-content-center">
     <div class="col-md-6">
