--- a/index.html
+++ b/index.html
@@ -251,11 +251,11 @@ y suscribite a este reinado de placer</p>
   <h2 class="text-center mb-5 text-uppercase" class="h2-custom">COMO DISFRUTAN NUESTROS MIEMBROS</h2>
   
   <div class="masonry__container">
-    <img class="masonry__item" src="https://imageplaceholder.net/400x300" alt="Imagen 1">
-    <img class="masonry__item" src="https://imageplaceholder.net/400x600" alt="Imagen 2">
+    <img class="masonry__item" src="Assets/HOME.fotos/400x300--18.png" alt="Imagen 1">
+    <img class="masonry__item" src="Assets/HOME.fotos/400x600-19.png " alt="Imagen 2">
     <img class="masonry__item" src="https://imageplaceholder.net/400x350" alt="Imagen 3">
-    <img class="masonry__item" src="https://imageplaceholder.net/400x500" alt="Imagen 4">
-    <img class="masonry__item" src="https://imageplaceholder.net/400x250" alt="Imagen 5">
+    <img class="masonry__item" src="Assets/HOME.fotos/400x500-21.png" alt="Imagen 4">
+    <img class="masonry__item" src="Assets/HOME.fotos/400x250-25.png" alt="Imagen 5">
     <img class="masonry__item" src="https://imageplaceholder.net/400x450" alt="Imagen 6">
     <img class="masonry__item" src="https://imageplaceholder.net/400x400" alt="Imagen 7">
     <img class="masonry__item" src="https://imageplaceholder.net/400x550" alt="Imagen 8">
