--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Ítems del menú -->
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link active" href="#">COMO FUNCIONA</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">COMO FUNCIONA</a></li>
         <li class="nav-item"><a class="nav-link" href="#">SERVICIOS</a></li>
         <li class="nav-item"><a class="nav-link" href="#">EQUIPO</a></li>
         <li class="nav-item"><a class="nav-link" href="#">CONTACTO</a></li>
