--- a/index.html
+++ b/index.html
@@ -270,14 +270,14 @@ y suscribite a este reinado de placer</p>
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="position-relative">
-          <img src="Assets/HOME.fotos/testi.1-16.png" class="img-fluid img-rounded w-100 rounded" alt="Imagen 1">
+          <img src="Assets/HOME.fotos/testi.1-16.png" class="img-fluid w-75 rounded" alt="Imagen 1">
         
         </div>
       </div>
       <!-- Slide 2 -->
       <div class="carousel-item">
         <div class="position-relative">
-          <img src="Assets/HOME.fotos/testi.2-17.png" class="img-fluid img-rounded w-100 rounded" alt="Imagen 2">
+          <img src="Assets/HOME.fotos/testi.2-17.png" class="img-fluid w-75 rounded" alt="Imagen 2">
       
         </div>
       </div>
