--- a/index.html
+++ b/index.html
@@ -270,14 +270,14 @@ y suscribite a este reinado de placer</p>
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="position-relative">
-          <img src="Assets/HOME.fotos/testi.1-16.png" class="img-fluid w-75 rounded" alt="Imagen 1">
+          <img src="Assets/HOME.fotos/testi.1-16.png" class="img-fluid w-75" alt="Imagen 1">
         
         </div>
       </div>
       <!-- Slide 2 -->
       <div class="carousel-item">
         <div class="position-relative">
-          <img src="Assets/HOME.fotos/testi.2-17.png" class="img-fluid w-75 rounded" alt="Imagen 2">
+          <img src="Assets/HOME.fotos/testi.2-17.png" class="img-fluid w-75" alt="Imagen 2">
       
         </div>
       </div>
@@ -296,7 +296,6 @@ y suscribite a este reinado de placer</p>
 <!-- FAQS: Preguntas frecuentes -->
 <section class="section-spacing container text-center">
   <h2 class="h2-custom">PREGUNTAS FRECUENTES</h2>
-  <p class="p-custom">Respuestas a dudas comunes.A dudas de todos</p>
   <div class="accordion mt-5" id="faqAccordion">
     <!-- Ítem de pregunta -->
     <div class="accordion-item">
@@ -307,7 +306,7 @@ y suscribite a este reinado de placer</p>
       </h2>
       <div id="collapseOne" class="accordion-collapse collapse show">
         <div class="accordion-body">
-          Explicación detallada.
+         No es posible, pero quedate tranqui, que nuestra selección es con los mas altos estandares de calidad
         </div>
       </div>
     </div>
@@ -318,7 +317,7 @@ y suscribite a este reinado de placer</p>
           ¿Qué hacaer si quiero mas vino?
         </button>
       </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse show">
+      <div id="collapseTwo" class="accordion-collapse collapse">
         <div class="accordion-body">
           Explicación detallada.
         </div>
@@ -332,7 +331,7 @@ y suscribite a este reinado de placer</p>
           ¿Que vino es el que vino?
         </button>
       </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse show">
+      <div id="collapseTwo" class="accordion-collapse collapse">
         <div class="accordion-body">
           Explicación detallada.
         </div>
@@ -346,7 +345,7 @@ y suscribite a este reinado de placer</p>
           ¿Que hacer si tengo una botella repetida?
         </button>
       </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse show">
+      <div id="collapseTwo" class="accordion-collapse collapse">
         <div class="accordion-body">
           Explicación detallada.
         </div>
@@ -360,7 +359,7 @@ y suscribite a este reinado de placer</p>
           ¿hay compromiso de permanencia?
         </button>
       </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse show">
+      <div id="collapseTwo" class="accordion-collapse collapse">
         <div class="accordion-body">
           Explicación detallada.
         </div>
