--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ amas, junto a Uva club.</p>
   <p class="beneficio-texto tipografia-inter planes-bg p">Conocé <span style="font-weight: 700;"> nuestras BOX disponibles</span>
 y suscribite a este reinado de placer</p>
   
-  <div class="row mt-5">
+  <div class="row mt-5 limite-pack">
     
     <!-- Card: Plan Básico -->
     <div class="col-md-4 mb-4">
@@ -294,74 +294,95 @@ y suscribite a este reinado de placer</p>
 
 
 <!-- FAQS: Preguntas frecuentes -->
-<section class="section-spacing container text-center">
-  <h2 class="h2-custom">PREGUNTAS FRECUENTES</h2>
-  <div class="accordion mt-5" id="faqAccordion">
-    <!-- Ítem de pregunta -->
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="headingOne">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-          ¿Puedo elegir los vinos que recibo?
-        </button>
-      </h2>
-      <div id="collapseOne" class="accordion-collapse collapse show">
-        <div class="accordion-body">
-         No es posible, pero quedate tranqui, que nuestra selección es con los mas altos estandares de calidad
+<section class="section-spacing container">
+  <h2 class="h2-custom text-center">PREGUNTAS FRECUENTES</h2>
+  <div class="row mt-5">
+    <div class="col-md-6">
+      <!-- Pregunta 1 -->
+      <div class="accordion" id="faqLeft">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+              ¿Puedo elegir los vinos que recibo?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#faqLeft">
+            <div class="accordion-body">
+              No es posible, pero quedate tranqui, que nuestra selección es con los más altos estándares de calidad.
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    <!-- Ítem de pregunta -->
-     <div class="accordion-item">
-      <h2 class="accordion-header" id="headingTwo">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
-          ¿Qué hacaer si quiero mas vino?
-        </button>
-      </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse">
-        <div class="accordion-body">
-          Explicación detallada.
+        <!-- Pregunta 2 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
+              ¿Qué hacer si quiero más vino?
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#faqLeft">
+            <div class="accordion-body">
+              Pedilo desde tu perfil. ¡Siempre hay más!
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-
-     <!-- Ítem de pregunta -->
-     <div class="accordion-item">
-      <h2 class="accordion-header" id="headingTwo">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
-          ¿Que vino es el que vino?
-        </button>
-      </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse">
-        <div class="accordion-body">
-          Explicación detallada.
-        </div>
-      </div>
-    </div>
-
-     <!-- Ítem de pregunta -->
-     <div class="accordion-item">
-      <h2 class="accordion-header" id="headingTwo">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
-          ¿Que hacer si tengo una botella repetida?
-        </button>
-      </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse">
-        <div class="accordion-body">
-          Explicación detallada.
+        <!-- Pregunta 3 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree">
+              ¿Puedo recibir vinos sin alcohol?
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#faqLeft">
+            <div class="accordion-body">
+              Aún no, pero lo estamos evaluando. ¡Gracias por la sugerencia!
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-     <!-- Ítem de pregunta -->
-     <div class="accordion-item">
-      <h2 class="accordion-header" id="headingTwo">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
-          ¿hay compromiso de permanencia?
-        </button>
-      </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse">
-        <div class="accordion-body">
-          Explicación detallada.
+    <div class="col-md-6">
+      <!-- Otro acordeón para la segunda columna -->
+      <div class="accordion" id="faqRight">
+        <!-- Pregunta 4 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingFour">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour">
+              ¿Cómo obtener más productos?
+            </button>
+          </h2>
+          <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#faqRight">
+            <div class="accordion-body">
+              Explorá los packs adicionales desde tu cuenta.
+            </div>
+          </div>
+        </div>
+
+        <!-- Pregunta 6 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingFour">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour">
+              Quiero acceder a un pack familiar
+            </button>
+          </h2>
+          <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#faqRight">
+            <div class="accordion-body">
+              Aun no contamos con plan familiar.
+            </div>
+          </div>
+        </div>
+        <!-- Pregunta 5 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingFive">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive">
+              ¿Hay compromiso de permanencia?
+            </button>
+          </h2>
+          <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#faqRight">
+            <div class="accordion-body">
+              No, podés cancelar cuando quieras. Sin vueltas.
+            </div>
+          </div>
         </div>
       </div>
     </div>
