botones oreguntas freeutnes. aun no toque los colores celeste cuadno se abre

--- a/index.html
+++ b/index.html
@@ -298,12 +298,13 @@ y suscribite a este reinado de placer</p>
   <h2 class="h2-custom text-center">PREGUNTAS FRECUENTES</h2>
   <div class="row mt-5">
     <div class="col-md-6">
-      <!-- Pregunta 1 -->
       <div class="accordion" id="faqLeft">
+        <!-- Pregunta 1 -->
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+            <button class="accordion-button collapsed d-flex justify-content-between align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
               ¿Puedo elegir los vinos que recibo?
+              <span class="faq-icon"></span>
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#faqLeft">
@@ -312,11 +313,13 @@ y suscribite a este reinado de placer</p>
             </div>
           </div>
         </div>
+
         <!-- Pregunta 2 -->
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
+            <button class="accordion-button collapsed d-flex justify-content-between align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
               ¿Qué hacer si quiero más vino?
+              <span class="faq-icon"></span>
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#faqLeft">
@@ -325,11 +328,13 @@ y suscribite a este reinado de placer</p>
             </div>
           </div>
         </div>
+
         <!-- Pregunta 3 -->
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree">
+            <button class="accordion-button collapsed d-flex justify-content-between align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree">
               ¿Puedo recibir vinos sin alcohol?
+              <span class="faq-icon"></span>
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#faqLeft">
@@ -342,13 +347,13 @@ y suscribite a este reinado de placer</p>
     </div>
 
     <div class="col-md-6">
-      <!-- Otro acordeón para la segunda columna -->
       <div class="accordion" id="faqRight">
         <!-- Pregunta 4 -->
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingFour">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour">
+            <button class="accordion-button collapsed d-flex justify-content-between align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour">
               ¿Cómo obtener más productos?
+              <span class="faq-icon"></span>
             </button>
           </h2>
           <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#faqRight">
@@ -358,27 +363,30 @@ y suscribite a este reinado de placer</p>
           </div>
         </div>
 
-        <!-- Pregunta 6 -->
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingFour">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour">
-              Quiero acceder a un pack familiar
-            </button>
-          </h2>
-          <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#faqRight">
-            <div class="accordion-body">
-              Aun no contamos con plan familiar.
-            </div>
-          </div>
-        </div>
         <!-- Pregunta 5 -->
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingFive">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive">
-              ¿Hay compromiso de permanencia?
+            <button class="accordion-button collapsed d-flex justify-content-between align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive">
+              Quiero acceder a un pack familiar
+              <span class="faq-icon"></span>
             </button>
           </h2>
           <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#faqRight">
+            <div class="accordion-body">
+              Aún no contamos con plan familiar.
+            </div>
+          </div>
+        </div>
+
+        <!-- Pregunta 6 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingSix">
+            <button class="accordion-button collapsed d-flex justify-content-between align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix">
+              ¿Hay compromiso de permanencia?
+              <span class="faq-icon"></span>
+            </button>
+          </h2>
+          <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#faqRight">
             <div class="accordion-body">
               No, podés cancelar cuando quieras. Sin vueltas.
             </div>
@@ -388,6 +396,7 @@ y suscribite a este reinado de placer</p>
     </div>
   </div>
 </section>
+
 <!-- /FAQS -->
 
 <!-- CONTACT FORM: Formulario de contacto -->
