--- a/index.html
+++ b/index.html
@@ -400,26 +400,36 @@ y suscribite a este reinado de placer</p>
 <!-- /FAQS -->
 
 <!-- CONTACT FORM: Formulario de contacto -->
-<section class="section-spacing container text-center">
-  <h2 class="h2-custom">QUEREMOS SABER DE VOS</h2>
-  <p class="p-custom">Envía un mensaje directamente desde la web.</p>
-  <div class="row justify-content-center">
+<section class="section-spacing container contacto-formulario">
+  <div class="row align-items-center">
+    <!-- Imagen a la izquierda -->
+    <div class="col-md-6 d-none d-md-block">
+      <img src="Assets/HOME.fotos/contacto-28.png" alt="Foto contacto" class="img-fluid">
+    </div>
+
+    <!-- Formulario a la derecha -->
     <div class="col-md-6">
+      <p class="mb-1  beneficio-texto tipografia-inter">Contáctanos</p>
+      <h2 class=".h2-custom">QUEREMOS SABER DE VOS</h2>
+
       <form>
-        <div class="mb-3">
-          <input type="text" class="form-control" placeholder="Tu nombre">
+        <div class="row mb-3">
+          <div class="col">
+            <input type="text" class="form-control-custom" placeholder="NOMBRE">
+          </div>
+          <div class="col">
+            <input type="text" class="form-control-custom" placeholder="APELLIDO">
+          </div>
         </div>
         <div class="mb-3">
-          <input type="email" class="form-control" placeholder="Tu email">
+          <textarea class="form-control-custom" rows="4" placeholder="TU CONSULTA ACÁ"></textarea>
         </div>
-        <div class="mb-3">
-          <textarea class="form-control" rows="4" placeholder="Tu mensaje"></textarea>
-        </div>
-        <button type="submit" class="btn btn-dark w-100">Enviar Mensaje</button>
+        <button type="submit" class="btn btn-lima w-100 mt-2">ENVIAR</button>
       </form>
     </div>
   </div>
 </section>
+
 <!-- /CONTACT FORM -->
 
 <!-- FOOTER: Pie de página -->
