--- a/index.html
+++ b/index.html
@@ -431,6 +431,52 @@ y suscribite a este reinado de placer</p>
 </section>
 
 <!-- /CONTACT FORM -->
+<section class="footer-section text-white py-5" style="background-image: url('Assets/footer-textura.png'); background-size: cover; background-position: center;">
+  <div class="container">
+    <div class="row text-start">
+      <!-- Logo y dirección -->
+      <div class="col-12 col-md-3 mb-4">
+        <h5 class="fw-bold">UVA CLUB</h5>
+        <p class="mb-0">Av. Premium 321<br>Buenos Aires, Argentina<br>Teléfono +54 11 2356 8322</p>
+      </div>
+
+      <!-- Inicio -->
+      <div class="col-6 col-md-2 mb-4">
+        <h6 class="fw-bold">inicio</h6>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-white text-decoration-none">Cómo funciona</a></li>
+          <li><a href="#" class="text-white text-decoration-none">Historia</a></li>
+          <li><a href="#" class="text-white text-decoration-none">Suscripciones</a></li>
+          <li><a href="#" class="text-white text-decoration-none">Testimonios</a></li>
+          <li><a href="#" class="text-white text-decoration-none">FQA</a></li>
+        </ul>
+      </div>
+
+      <!-- WineSwap -->
+      <div class="col-6 col-md-3 mb-4">
+        <h6 class="fw-bold">WineSwap</h6>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-white text-decoration-none">Qué es</a></li>
+          <li><a href="#" class="text-white text-decoration-none">Cómo funciona</a></li>
+          <li><a href="#" class="text-white text-decoration-none">Intercambios</a></li>
+          <li><a href="#" class="text-white text-decoration-none">Ofertas</a></li>
+          <li><a href="#" class="text-white text-decoration-none">Términos y condiciones</a></li>
+        </ul>
+      </div>
+
+      <!-- Ayuda -->
+      <div class="col-12 col-md-4">
+        <h6 class="fw-bold">AYUDA</h6>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-white text-decoration-none">Atención al cliente</a></li>
+          <li><a href="#" class="text-white text-decoration-none">Términos y condiciones</a></li>
+          <li><a href="#" class="text-white text-decoration-none">Política de Privacidad</a></li>
+          <li><a href="#" class="text-white text-decoration-none">Preguntas frecuentes</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- FOOTER: Pie de página -->
 <footer class="text-center py-4">
