--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+    
 
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="styles.css">
@@ -44,25 +45,24 @@
 </nav>
 <!-- /NAVBAR -->
 
-<!-- HERO: Sección de portada con llamado a la acción -->
-<section class="section-spacing container d-flex align-items-center justify-content-between" style="min-height: 100vh; padding-top: 100px;">
-  <div class="row align-items-center">
-    <!-- Texto principal -->
-    <div class="col-lg-6">
-      <h1 class="h1-custom">TODOS LOS MESES UNA NUEVA EXPERIENCIA</h1>
-      <p class="p-custom">Sin salir de casa, sin dejar de explorar. Conocé las bodegas virtuales. Una experiencia de los mejores sabores sin salir de tu casa ¡Comenzá ahora!</p>
-      <div class="d-flex gap-3 mt-4">
-        <a href="#" class="btn btn-dark">Viví la experiencia</a>
-  
+<!-- HERO: Sección de portada con llamado a la acción --> 
+<section class="hero-section d-flex align-items-center" style="min-height: 100vh; padding-top: 100px;">
+  <div class="container">
+    <div class="row align-items-center">
+      <!-- Texto principal -->
+      <div class="col-lg-6">
+        <h1 class="h1-custom">TODOS LOS MESES UNA NUEVA EXPERIENCIA</h1>
+        <p class="p-custom">Sin salir de casa, sin dejar de explorar. Conocé las bodegas virtuales. Una experiencia de los mejores sabores sin salir de tu casa ¡Comenzá ahora!</p>
+        <div class="d-flex gap-3 mt-4">
+          <a href="#" class="btn btn-dark">Viví la experiencia</a>
+        </div>
       </div>
-    </div>
-    <!-- Imagen destacada -->
-    <div class="col-lg-6 text-center">
-      <img src="Assets/HOME.fotos/caja.hero-15.png" class="img-fluid img-rounded" alt="Imagen Hero">
+    
     </div>
   </div>
 </section>
 <!-- /HERO -->
+
 
 <!-- SECCIÓN G: Beneficios destacados en cards con íconos de Bootstrap -->
 <section class="section-spacing container text-center py-5">
@@ -431,12 +431,14 @@ y suscribite a este reinado de placer</p>
 </section>
 
 <!-- /CONTACT FORM -->
-<section class="footer-section text-white py-5" style="background-image: url('Assets/footer-textura.png'); background-size: cover; background-position: center;">
+<!-- SECTION con fondo + contenido del footer -->
+<section class="footer-section text-white py-5" style="background-image: url('Assets/HOME.fotos/'); background-size: cover; background-position: center;">
   <div class="container">
     <div class="row text-start">
       <!-- Logo y dirección -->
       <div class="col-12 col-md-3 mb-4">
-        <h5 class="fw-bold">UVA CLUB</h5>
+      <img src="Assets/HOME.fotos/logo.uva-07.png" alt="UVA Club logo" class="footer-logo mb-3">
+
         <p class="mb-0">Av. Premium 321<br>Buenos Aires, Argentina<br>Teléfono +54 11 2356 8322</p>
       </div>
 
@@ -478,13 +480,12 @@ y suscribite a este reinado de placer</p>
   </div>
 </section>
 
-<!-- FOOTER: Pie de página -->
+<!-- Footer legal aparte (sin fondo, más chico) -->
 <footer class="text-center py-4">
-  <div class="container">
-    <p class="p-custom">© 2025 Belluccia 3 - Visible Template. Todos los derechos reservados Agustina Romero.</p>
+  <div class="text-center pt-3">
+    <p class="footer-copy">© 2025 Belluccia 3 - Visible Template. Todos los derechos reservados Agustina Romero.</p>
   </div>
 </footer>
-<!-- /FOOTER -->
 
 <!-- Bootstrap Bundle JS (incluye Popper) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
@@ -499,5 +500,42 @@ window.addEventListener('scroll', function() {
 
 <!-- Scripts adicionales -->
 <script src="scripts.js"></script>
+<!-- Botón Scroll to Top -->
+<!-- Botón Scroll to Top -->
+<button id="btn-scroll-top" class="scroll-top-btn">
+  <i class="bi bi-arrow-up"></i>
+</button>
+
+<script>
+  const btnScrollTop = document.querySelector('.scroll-top-btn');
+  const footer = document.querySelector('footer');
+
+  // Verificar si el footer está visible en pantalla
+  function checkFooterInView() {
+    const rect = footer.getBoundingClientRect();
+    const isVisible = rect.top < window.innerHeight && rect.bottom >= 0;
+
+    if (isVisible) {
+      btnScrollTop.classList.add('show');
+    } else {
+      btnScrollTop.classList.remove('show');
+    }
+  }
+
+  // Scroll suave al top
+  btnScrollTop.addEventListener('click', () => {
+    window.scrollTo({
+      top: 0,
+      behavior: 'smooth'
+    });
+  });
+
+  // Escuchar scroll
+  window.addEventListener('scroll', checkFooterInView);
+</script>
+
+
+
+
 </body>
 </html>
