--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <!-- Texto principal -->
       <div class="col-lg-6">
         <h1 class="h1-custom">TODOS LOS MESES UNA NUEVA EXPERIENCIA</h1>
-        <p class="p-custom">Sin salir de casa, sin dejar de explorar. Conocé las bodegas virtuales. Una experiencia de los mejores sabores sin salir de tu casa ¡Comenzá ahora!</p>
+        <p class="p-custom">Sin salir de casa, sin dejar de explorar. Conocé las bodegas virtuales. <br> Una experiencia de los mejores sabores sin salir de tu casa ¡Comenzá ahora!</p>
         <div class="d-flex gap-3 mt-4">
           <a href="#" class="btn btn-dark">Viví la experiencia</a>
         </div>
