--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <div class="row align-items-center">
       <!-- Texto principal -->
       <div class="col-lg-6">
-        <h1 class="h1-custom">TODOS LOS MESES UNA NUEVA EXPERIENCIA</h1>
-        <p class="p-custom">Sin salir de casa, sin dejar de explorar. Conocé las bodegas virtuales. <br> Una experiencia de los mejores sabores sin salir de tu casa ¡Comenzá ahora!</p>
+        <h1 class="h1-custom">TODOS LOS MESES <br> UNA NUEVA EXPERIENCIA</h1>
+        <p class="p-custom">Sin salir de casa, sin dejar de explorar.<span style="font-weight: 700;"> Conocé las bodegas virtuales.</span> Una experiencia de los mejores sabores sin salir de tu casa ¡Comenzá ahora!</p>
         <div class="d-flex gap-3 mt-4">
-          <a href="#" class="btn btn-dark">Viví la experiencia</a>
+          <a href="#" class="btn btn-dark">VIVÍ LA EXPERIENCIA</a>
         </div>
       </div>
     
@@ -165,7 +165,7 @@ y suscribite a este reinado de placer</p>
         </ul>
 
         <!-- Botón CTA -->
-        <a href="#" class="btn btn-primary mt-3">ESCOGER PLAN</a>
+        <a href="#" class="btn btn btn-dark mt-3">ESCOGER PLAN</a>
       </div>
     </div>
 
@@ -193,7 +193,7 @@ y suscribite a este reinado de placer</p>
         </ul>
 
         <!-- Botón CTA -->
-        <a href="#" class="btn btn-primary mt-3">ESCOGER PLAN</a>
+        <a href="#" class="btn btn btn-dark mt-3">ESCOGER PLAN</a>
       </div>
     </div>
 
@@ -221,7 +221,7 @@ y suscribite a este reinado de placer</p>
         </ul>
 
         <!-- Botón CTA -->
-        <a href="#" class="btn btn-primary mt-3">ESCOGER PLAN</a>
+        <a href="#" class="btn btn-dark mt-3">ESCOGER PLAN</a>
       </div>
     </div>
 
@@ -424,7 +424,7 @@ y suscribite a este reinado de placer</p>
         <div class="mb-3">
           <textarea class="form-control-custom" rows="4" placeholder="TU CONSULTA ACÁ"></textarea>
         </div>
-        <button type="submit" class="btn btn-lima w-100 mt-2">ENVIAR</button>
+        <button type="submit" class="btn btn-dark w-100 mt-2">ENVIAR</button>
       </form>
     </div>
   </div>
